2005-11-04  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/DefaultStyledDocument.java: Reformatted.

2005-11-04  Lillian Angel  <langel@redhat.com>

	* java/awt/Window.java
	(setLocationRelativeTo): Implemented case when
	component is not null.

2005-11-04  Tom Tromey  <tromey@redhat.com>

	* java/awt/image/BufferedImage.java (BufferedImage): Implement
	Transparency.
	(getTransparency): New method.

2005-11-04  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * gnu/CORBA/SocketRepository.java (sockets): Changed type to
	HashMap. (put_socket, get_socket, gc):
	Always synchronize on 'sockets'.

2005-11-04  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Set version to 0.20-pre.

2005-11-04  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/StyleConstants.java:
	(Family): New API field.
	(Size): New API field.

2005-11-04  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/basic/BasicMenuItemUI.java
	(paintMenuItem): Changed to use isTopLevelMenu rather than checking
	instance of parent.
	* javax/swing/plaf/basic/BasicPopupMenuUI.java
	(popupMenuWillBecomeInvisible): Added check to prevent NPE.
	* javax/swing/Popup.java:
	Added new private field.
	(LightweightPopup): Initialized layeredPane.
	(show): Removed unneeded code.
	(hide): Likewise.

2005-11-04  Roman Kennke  <kennke@aicas.com>

	* javax/swing/table/DefaultTableCellRenderer.java
	(updateUI): Set the background and foreground color fields to null
	here so that installing the LabelUI does not interfere with our
	custom set colors.
	(getTableCellRendererComponent): Only set UI focus colors when
	cell is actually editable. Added optimization for the case
	when background is equal to table background.

2005-11-04  Roman Kennke  <kennke@aicas.com>

	* javax/swing/table/DefaultTableCellRenderer.java
	(getTableCellRendererComponent): Call super.setBackground() or
	super.setForeground() to avoid overriding custom set background or